tests/models/struct/unnamed/string/pass/default.rs
use dade::model;
#[model]
struct TestModel (
   #[field(default = "default")]
    String
);
fn main() {}
