tests/models/struct/unnamed/string/fail/alias.rs
use dade::model;
#[model]
struct TestModel (
   #[field(alias = "val")]
    String
);
fn main() {}
